@@ -184,6 +184,9 @@ void MessagePortChannel::takeAllMessagesForPort(const MessagePortIdentifier& por
     locker.unlockEarly();
     callback(WTFMove(result), [size, this, port, protectedThis = WTFMove(m_pendingMessageProtectors[i]), transferredPortProtectors = WTFMove(transferredPortProtectors)] {
         UNUSED_PARAM(port);
+#if LOG_DISABLED
+        UNUSED_PARAM(size);
+#endif
         --m_messageBatchesInFlight;
         LOG(MessagePorts, "Message port channel %s was notified that a batch of %zu message port messages targeted for port %s just completed dispatch, in flight is now %llu", logString().utf8().data(), size, port.logString().utf8().data(), m_messageBatchesInFlight);
 
